...
        <TextView
            android:id="@+id/tv_info_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_don_t_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_move_to_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_move_to_register"
            android:layout_width="wrap_content"
...
